# Raspberry-sysinfo-display

./: .gitignore  CMakeCache.txt  Makefile  README.md  autostart.sh  oled_i2c_show_status  oledctl.sh
inc/: ssd1306.h  sys_status.h  vpopen.h
oled_show/: CMakeLists.txt  Makefile  cmake_install.cmake  oled_i2c_show_status
oled_show/inc/: character.h  sys_status.h
oled_show/src/: main.c  ssd1306.c
src/: main.c  ssd1306.c  sys_status.c  vpopen.c
